// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Git Sync - entity tab rendering landing view 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody"
    data-name="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main bodyContainer"
    >
      <div
        class="StyledProps--font StyledProps--main collapseFeatures"
      >
        <div
          class="Collapse--main"
        >
          <div
            class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header collapseHeader"
          >
            <div
              class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                data-icon="main-chevron-right"
              >
                <svg
                  enable-background="new 0 0 8 14"
                  height="16"
                  viewBox="0 0 8 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7.7 6.3-6-6c-.2-.2-.4-.3-.7-.3-.6 0-1 .4-1 1 0 .3.1.5.3.7l5.3 5.3-5.3 5.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
              <div
                class="Layout--horizontal StyledProps--main header StyledProps--flex"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--margin-left-small StyledProps--color StyledProps--color-primary7 StyledProps--inline"
                >
                  gitSyncRepoTest
                </span>
                <div
                  class="OverlaySpinner--overlaySpinner"
                >
                  <form
                    class="FormikForm--main"
                  >
                    <div>
                      <div
                        class="bp3-form-group"
                        data-id="branch-0"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-popover-wrapper Select--main bp3-fill"
                          >
                            <div
                              class="bp3-popover-target"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <span
                                  class="bp3-input-left-container"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main"
                                    data-icon="git-new-branch"
                                  >
                                    <svg
                                      height="16"
                                      viewBox="0 0 13 16"
                                      width="16"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M10.406.003a2.399 2.399 0 0 0-.8 4.658v.94a.8.8 0 0 1-.8.8H4.001a2.413 2.413 0 0 0-.8.14V4.66A2.399 2.399 0 0 0 2.402 0a2.399 2.399 0 0 0-.8 4.661v6.678a2.399 2.399 0 0 0 .8 4.661 2.399 2.399 0 0 0 .8-4.661v-2.54a.8.8 0 0 1 .8-.799h4.803a2.4 2.4 0 0 0 2.402-2.4v-.939a2.399 2.399 0 0 0-.8-4.658z"
                                        fill="currentColor"
                                      />
                                    </svg>
                                  </span>
                                </span>
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="branch"
                                  placeholder="- Select -"
                                  style="padding-right: 0px; padding-left: 0px;"
                                  type="text"
                                  value="master"
                                />
                                <span
                                  class="bp3-input-action"
                                >
                                  <span
                                    class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                    icon="chevron-down"
                                  >
                                    <svg
                                      data-icon="chevron-down"
                                      height="14"
                                      viewBox="0 0 16 16"
                                      width="14"
                                    >
                                      <desc>
                                        chevron-down
                                      </desc>
                                      <path
                                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            />
          </div>
          <div
            class="Collapse--collapse"
          >
            <div
              class="bp3-collapse collapse"
            >
              <div
                aria-hidden="false"
                class="bp3-collapse-body"
                style="transform: translateY(-undefinedpx);"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main collapseFeatures"
      >
        <div
          class="Collapse--main"
        >
          <div
            class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header collapseHeader"
          >
            <div
              class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                data-icon="main-chevron-right"
              >
                <svg
                  enable-background="new 0 0 8 14"
                  height="16"
                  viewBox="0 0 8 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7.7 6.3-6-6c-.2-.2-.4-.3-.7-.3-.6 0-1 .4-1 1 0 .3.1.5.3.7l5.3 5.3-5.3 5.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
              <div
                class="Layout--horizontal StyledProps--main header StyledProps--flex"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--margin-left-small StyledProps--color StyledProps--color-primary7 StyledProps--inline"
                >
                  gitSyncRepo
                </span>
                <div
                  class="OverlaySpinner--overlaySpinner"
                >
                  <form
                    class="FormikForm--main"
                  >
                    <div>
                      <div
                        class="bp3-form-group"
                        data-id="branch-0"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-popover-wrapper Select--main bp3-fill"
                          >
                            <div
                              class="bp3-popover-target"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <span
                                  class="bp3-input-left-container"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main"
                                    data-icon="git-new-branch"
                                  >
                                    <svg
                                      height="16"
                                      viewBox="0 0 13 16"
                                      width="16"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M10.406.003a2.399 2.399 0 0 0-.8 4.658v.94a.8.8 0 0 1-.8.8H4.001a2.413 2.413 0 0 0-.8.14V4.66A2.399 2.399 0 0 0 2.402 0a2.399 2.399 0 0 0-.8 4.661v6.678a2.399 2.399 0 0 0 .8 4.661 2.399 2.399 0 0 0 .8-4.661v-2.54a.8.8 0 0 1 .8-.799h4.803a2.4 2.4 0 0 0 2.402-2.4v-.939a2.399 2.399 0 0 0-.8-4.658z"
                                        fill="currentColor"
                                      />
                                    </svg>
                                  </span>
                                </span>
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="branch"
                                  placeholder="- Select -"
                                  style="padding-right: 0px; padding-left: 0px;"
                                  type="text"
                                  value="feature"
                                />
                                <span
                                  class="bp3-input-action"
                                >
                                  <span
                                    class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                    icon="chevron-down"
                                  >
                                    <svg
                                      data-icon="chevron-down"
                                      height="14"
                                      viewBox="0 0 16 16"
                                      width="14"
                                    >
                                      <desc>
                                        chevron-down
                                      </desc>
                                      <path
                                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            />
          </div>
          <div
            class="Collapse--collapse"
          >
            <div
              class="bp3-collapse collapse"
            >
              <div
                aria-hidden="false"
                class="bp3-collapse-body"
                style="transform: translateY(-undefinedpx);"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Git Sync - entity tab rendering summary view of a gitSyncRepo  1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-small"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="bp3-card bp3-elevation-0 Card--card"
      >
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600"
          >
            Pipelines
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--border StyledProps--border-false StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-primary6 StyledProps--background-primary1"
          >
            1
          </p>
        </div>
        <div
          class="TableV2--table table"
        >
          <div
            class="TableV2--header"
            role="row"
          >
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                NAME
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                IDENTIFIER
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 50%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                PATH
              </p>
            </div>
          </div>
          <div
            class="TableV2--body"
          >
            <div
              class="TableV2--row TableV2--card"
              role="row"
            >
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 25%;"
              >
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--inline"
                    data-icon="pipeline-ng"
                  >
                    <svg
                      enable-background="new 0 0 20 21"
                      height="16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="#25A6F7"
                        fill-rule="nonzero"
                      >
                        <path
                          d="M17.857 2.705h-3.672a2.85 2.85 0 00-5.614.714 2.85 2.85 0 005.614.714h3.672c.395 0 .714.32.714.715v6.428c0 .395-.32.714-.714.714h-6.786a.714.714 0 100 1.429h6.786c1.184 0 2.143-.96 2.143-2.143V4.848c0-1.184-.96-2.143-2.143-2.143zM11.43 4.848a1.429 1.429 0 110-2.858 1.429 1.429 0 010 2.858z"
                        />
                        <path
                          d="M17.143 14.848c-1.28 0-2.352.848-2.715 2.01H7.143a.711.711 0 01-.709-.685 2.85 2.85 0 00-.72-5.611 2.844 2.844 0 00-2.46 1.428H2.143a.714.714 0 01-.714-.714V4.848c0-.395.32-.715.714-.715h4.643a.714.714 0 000-1.428H2.143C.959 2.705 0 3.665 0 4.848v6.428c0 1.184.96 2.143 2.143 2.143h.714a2.85 2.85 0 002.147 2.757c.016 1.17.969 2.11 2.139 2.11h7.203a2.857 2.857 0 102.797-3.438zM4.286 13.419a1.429 1.429 0 112.858 0 1.429 1.429 0 01-2.858 0zm12.857 5.714a1.429 1.429 0 110-2.858 1.429 1.429 0 010 2.858z"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--padding-left-small StyledProps--inline"
                    style="--text-line-clamp: 1;"
                  >
                    pipelineOne
                  </span>
                </div>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 25%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1;"
                >
                  pipelineOne
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 50%;"
              >
                <a
                  href="https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/pipelineOne.yaml"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-primary7"
                    style="--text-line-clamp: 1;"
                  >
                    https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/pipelineOne.yaml
                  </p>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="bp3-card bp3-elevation-0 Card--card"
      >
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600"
          >
            Connectors
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--border StyledProps--border-false StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-primary6 StyledProps--background-primary1"
          >
            4
          </p>
        </div>
        <div
          class="TableV2--table table"
        >
          <div
            class="TableV2--header"
            role="row"
          >
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                NAME
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                IDENTIFIER
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 50%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                PATH
              </p>
            </div>
          </div>
          <div
            class="TableV2--body"
          >
            <div
              class="TableV2--row TableV2--card"
              role="row"
            >
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 25%;"
              >
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--inline"
                    data-icon="connectors-icon"
                  >
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 53 70"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M9 56.5c-3 .5-7.5-2-7-2m7 2c15 0 12-25.5 12-40l5 4-6.5-19-9 19 6-4s-.628 37-7.5 40z"
                        stroke="#445EE9"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                      <path
                        d="M47 58.996c-6.5-9.5-18-11.5-33.5-3 20-6.605 30.717 4.66 30.717 4.66h-8L52 68.496l-.783-16-4.217 6.5z"
                        stroke="#445EE9"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </span>
                  <span
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--padding-left-small StyledProps--inline"
                    style="--text-line-clamp: 1;"
                  >
                    Connector One
                  </span>
                </div>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 25%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1;"
                >
                  ConnectorOne
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 50%;"
              >
                <a
                  href="https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/abc.yaml"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-primary7"
                    style="--text-line-clamp: 1;"
                  >
                    https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/abc.yaml
                  </p>
                </a>
              </div>
            </div>
            <div
              class="TableV2--row TableV2--card"
              role="row"
            >
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 25%;"
              >
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--inline"
                    data-icon="connectors-icon"
                  >
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 53 70"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M9 56.5c-3 .5-7.5-2-7-2m7 2c15 0 12-25.5 12-40l5 4-6.5-19-9 19 6-4s-.628 37-7.5 40z"
                        stroke="#445EE9"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                      <path
                        d="M47 58.996c-6.5-9.5-18-11.5-33.5-3 20-6.605 30.717 4.66 30.717 4.66h-8L52 68.496l-.783-16-4.217 6.5z"
                        stroke="#445EE9"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </span>
                  <span
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--padding-left-small StyledProps--inline"
                    style="--text-line-clamp: 1;"
                  >
                    dailyTestOne
                  </span>
                </div>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 25%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1;"
                >
                  dailyTestOne
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 50%;"
              >
                <a
                  href="https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/dailyTestOne.yaml"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-primary7"
                    style="--text-line-clamp: 1;"
                  >
                    https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/dailyTestOne.yaml
                  </p>
                </a>
              </div>
            </div>
          </div>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--padding-left-huge StyledProps--padding-bottom-large"
          style="cursor: pointer;"
        >
          gitsync.seeMore
        </p>
      </div>
      <div
        class="bp3-card bp3-elevation-0 Card--card"
      >
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600"
          >
            FeatureFlags
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--border StyledProps--border-false StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-primary6 StyledProps--background-primary1"
          >
            1
          </p>
        </div>
        <div
          class="TableV2--table table"
        >
          <div
            class="TableV2--header"
            role="row"
          >
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                NAME
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                IDENTIFIER
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 50%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                PATH
              </p>
            </div>
          </div>
          <div
            class="TableV2--body"
          >
            <div
              class="TableV2--row TableV2--card"
              role="row"
            >
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 25%;"
              >
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--inline"
                    data-icon="cf-main"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10.632 2.07971c-2.82243-.49768-5.51395 1.38693-6.01163 4.20941L2.07971 20.698c-.49768 2.8224 1.38693 5.514 4.20941 6.0116l7.46438 1.3162c.1679.0296.2935-.151.2072-.2981L6.88248 15.6562c-.29658-.4692-.29241-1.3825.05036-1.6001.07852-.0505.31177-.259.31177-.259l.39862-.4359.06546-.0718c.36979-.4065.70389-.7738 1.75973-1.3023l.22718-.0791c1.5487-.4838 2.4098-.4488 3.2711-.4139.8615.035 1.7232.07 3.2734-.4142 1.2722-.3974 2.4293-1.17776 3.0743-1.66713.2862-.21723.7089-.15379.8993.15103l4.5967 7.3608c.143.229.1072.525-.1017.696-.4965.4061-1.5001 1.122-2.8336 1.5385-1.5487.4837-2.4322.4627-3.3158.4417-.8839-.021-1.768-.042-3.3182.4422-1.3142.4105-1.868.9475-2.0695 1.2038-.0485.0616-.0703.2104-.0324.279.3995.7242 2.2948 4.0598 3.7934 6.6936.1472.2588.4018.4378.695.4895l3.0704.5414c2.8224.4977 5.514-1.3869 6.0116-4.2094l2.5407-14.4089c.4977-2.82243-1.3869-5.51395-4.2094-6.01163L10.632 2.07971Z"
                        fill="url(#a)"
                      />
                      <path
                        d="M16.6465 13.0743c-1.3034.3401-2.0932.3153-2.8829.2906-.7894-.0248-1.5787-.0496-2.8808.2902-.7439.2156-1.1778.592-1.58721 1.072-.05524.0648-.06157.1578-.01723.2305l2.48154 4.0684c.0644.1056.209.1297.3076.055.3732-.2826 1.2802-.9008 2.4193-1.198 1.4688-.3833 2.348-.3747 3.2737-.3657.7169.0069 1.4619.0142 2.5302-.1601.7166-.1169 1.3017-.4284 1.6278-.6356.1658-.1054.2014-.3225.0948-.4875L19.4717 12.3c-.1188-.184-.3687-.2355-.5593-.1276-.4181.2366-1.2035.6248-2.2659.9019Z"
                        fill="url(#b)"
                      />
                      <defs>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="a"
                          x1="6.83717"
                          x2="23.7805"
                          y1="2"
                          y2="28.2273"
                        >
                          <stop
                            stop-color="#FFC100"
                          />
                          <stop
                            offset="1"
                            stop-color="#E66B35"
                          />
                        </lineargradient>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="b"
                          x1="6.83717"
                          x2="23.7805"
                          y1="2"
                          y2="28.2273"
                        >
                          <stop
                            stop-color="#FFC100"
                          />
                          <stop
                            offset="1"
                            stop-color="#E66B35"
                          />
                        </lineargradient>
                      </defs>
                    </svg>
                  </span>
                  <span
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--padding-left-small StyledProps--inline"
                    style="--text-line-clamp: 1;"
                  >
                    featureFlags
                  </span>
                </div>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 25%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1;"
                >
                  featureFlags
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 50%;"
              >
                <a
                  href="https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/featureflags.yaml"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-primary7"
                    style="--text-line-clamp: 1;"
                  >
                    https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/featureflags.yaml
                  </p>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Git Sync - entity tab rendering summary view of a gitSyncRepo  2`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-small"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="bp3-card bp3-elevation-0 Card--card"
      >
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600"
          >
            Pipelines
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--border StyledProps--border-false StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-primary6 StyledProps--background-primary1"
          >
            1
          </p>
        </div>
        <div
          class="TableV2--table table"
        >
          <div
            class="TableV2--header"
            role="row"
          >
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                NAME
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                IDENTIFIER
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 50%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                PATH
              </p>
            </div>
          </div>
          <div
            class="TableV2--body"
          >
            <div
              class="TableV2--row TableV2--card"
              role="row"
            >
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 25%;"
              >
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--inline"
                    data-icon="pipeline-ng"
                  >
                    <svg
                      enable-background="new 0 0 20 21"
                      height="16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="#25A6F7"
                        fill-rule="nonzero"
                      >
                        <path
                          d="M17.857 2.705h-3.672a2.85 2.85 0 00-5.614.714 2.85 2.85 0 005.614.714h3.672c.395 0 .714.32.714.715v6.428c0 .395-.32.714-.714.714h-6.786a.714.714 0 100 1.429h6.786c1.184 0 2.143-.96 2.143-2.143V4.848c0-1.184-.96-2.143-2.143-2.143zM11.43 4.848a1.429 1.429 0 110-2.858 1.429 1.429 0 010 2.858z"
                        />
                        <path
                          d="M17.143 14.848c-1.28 0-2.352.848-2.715 2.01H7.143a.711.711 0 01-.709-.685 2.85 2.85 0 00-.72-5.611 2.844 2.844 0 00-2.46 1.428H2.143a.714.714 0 01-.714-.714V4.848c0-.395.32-.715.714-.715h4.643a.714.714 0 000-1.428H2.143C.959 2.705 0 3.665 0 4.848v6.428c0 1.184.96 2.143 2.143 2.143h.714a2.85 2.85 0 002.147 2.757c.016 1.17.969 2.11 2.139 2.11h7.203a2.857 2.857 0 102.797-3.438zM4.286 13.419a1.429 1.429 0 112.858 0 1.429 1.429 0 01-2.858 0zm12.857 5.714a1.429 1.429 0 110-2.858 1.429 1.429 0 010 2.858z"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--padding-left-small StyledProps--inline"
                    style="--text-line-clamp: 1;"
                  >
                    pipelineOne
                  </span>
                </div>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 25%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1;"
                >
                  pipelineOne
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 50%;"
              >
                <a
                  href="https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/pipelineOne.yaml"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-primary7"
                    style="--text-line-clamp: 1;"
                  >
                    https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/pipelineOne.yaml
                  </p>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="bp3-card bp3-elevation-0 Card--card"
      >
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600"
          >
            Connectors
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--border StyledProps--border-false StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-primary6 StyledProps--background-primary1"
          >
            4
          </p>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-small"
        >
          <div
            class="TableV2--table table"
          >
            <div
              class="TableV2--header"
              role="row"
            >
              <div
                class="TableV2--cell TableV2--sortable"
                colspan="1"
                role="columnheader"
                style="width: 25%;"
                title="Toggle SortBy"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                >
                  NAME
                </p>
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical StyledProps--main StyledProps--padding-left-small"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="15"
                    viewBox="0 0 16 16"
                    width="15"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="TableV2--cell TableV2--sortable"
                colspan="1"
                role="columnheader"
                style="width: 25%;"
                title="Toggle SortBy"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                >
                  IDENTIFIER
                </p>
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical StyledProps--main StyledProps--padding-left-small"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="15"
                    viewBox="0 0 16 16"
                    width="15"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="TableV2--cell TableV2--sortable"
                colspan="1"
                role="columnheader"
                style="width: 50%;"
                title="Toggle SortBy"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                >
                  PATH
                </p>
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical StyledProps--main StyledProps--padding-left-small"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="15"
                    viewBox="0 0 16 16"
                    width="15"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="TableV2--body"
            />
          </div>
          <p
            class="StyledProps--font StyledProps--main StyledProps--padding-large StyledProps--color StyledProps--color-primary7"
          >
            gitsync.seeLess
          </p>
        </div>
      </div>
      <div
        class="bp3-card bp3-elevation-0 Card--card"
      >
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600"
          >
            FeatureFlags
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-small StyledProps--padding-left-small StyledProps--padding-right-small StyledProps--border StyledProps--border-false StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-primary6 StyledProps--background-primary1"
          >
            1
          </p>
        </div>
        <div
          class="TableV2--table table"
        >
          <div
            class="TableV2--header"
            role="row"
          >
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                NAME
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 25%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                IDENTIFIER
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 50%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                PATH
              </p>
            </div>
          </div>
          <div
            class="TableV2--body"
          >
            <div
              class="TableV2--row TableV2--card"
              role="row"
            >
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 25%;"
              >
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--inline"
                    data-icon="cf-main"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10.632 2.07971c-2.82243-.49768-5.51395 1.38693-6.01163 4.20941L2.07971 20.698c-.49768 2.8224 1.38693 5.514 4.20941 6.0116l7.46438 1.3162c.1679.0296.2935-.151.2072-.2981L6.88248 15.6562c-.29658-.4692-.29241-1.3825.05036-1.6001.07852-.0505.31177-.259.31177-.259l.39862-.4359.06546-.0718c.36979-.4065.70389-.7738 1.75973-1.3023l.22718-.0791c1.5487-.4838 2.4098-.4488 3.2711-.4139.8615.035 1.7232.07 3.2734-.4142 1.2722-.3974 2.4293-1.17776 3.0743-1.66713.2862-.21723.7089-.15379.8993.15103l4.5967 7.3608c.143.229.1072.525-.1017.696-.4965.4061-1.5001 1.122-2.8336 1.5385-1.5487.4837-2.4322.4627-3.3158.4417-.8839-.021-1.768-.042-3.3182.4422-1.3142.4105-1.868.9475-2.0695 1.2038-.0485.0616-.0703.2104-.0324.279.3995.7242 2.2948 4.0598 3.7934 6.6936.1472.2588.4018.4378.695.4895l3.0704.5414c2.8224.4977 5.514-1.3869 6.0116-4.2094l2.5407-14.4089c.4977-2.82243-1.3869-5.51395-4.2094-6.01163L10.632 2.07971Z"
                        fill="url(#a)"
                      />
                      <path
                        d="M16.6465 13.0743c-1.3034.3401-2.0932.3153-2.8829.2906-.7894-.0248-1.5787-.0496-2.8808.2902-.7439.2156-1.1778.592-1.58721 1.072-.05524.0648-.06157.1578-.01723.2305l2.48154 4.0684c.0644.1056.209.1297.3076.055.3732-.2826 1.2802-.9008 2.4193-1.198 1.4688-.3833 2.348-.3747 3.2737-.3657.7169.0069 1.4619.0142 2.5302-.1601.7166-.1169 1.3017-.4284 1.6278-.6356.1658-.1054.2014-.3225.0948-.4875L19.4717 12.3c-.1188-.184-.3687-.2355-.5593-.1276-.4181.2366-1.2035.6248-2.2659.9019Z"
                        fill="url(#b)"
                      />
                      <defs>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="a"
                          x1="6.83717"
                          x2="23.7805"
                          y1="2"
                          y2="28.2273"
                        >
                          <stop
                            stop-color="#FFC100"
                          />
                          <stop
                            offset="1"
                            stop-color="#E66B35"
                          />
                        </lineargradient>
                        <lineargradient
                          gradientUnits="userSpaceOnUse"
                          id="b"
                          x1="6.83717"
                          x2="23.7805"
                          y1="2"
                          y2="28.2273"
                        >
                          <stop
                            stop-color="#FFC100"
                          />
                          <stop
                            offset="1"
                            stop-color="#E66B35"
                          />
                        </lineargradient>
                      </defs>
                    </svg>
                  </span>
                  <span
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--padding-left-small StyledProps--inline"
                    style="--text-line-clamp: 1;"
                  >
                    featureFlags
                  </span>
                </div>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 25%;"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main"
                  style="--text-line-clamp: 1;"
                >
                  featureFlags
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 50%;"
              >
                <a
                  href="https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/featureflags.yaml"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-primary7"
                    style="--text-line-clamp: 1;"
                  >
                    https://github.com/wings-software/sunnykesh-gitSync/blob/gitSync/second/.harness/featureflags.yaml
                  </p>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
